# prof-backend

./: README.md  pyproject.toml  sql_app.db
src/app/: main.py
src/app/core/: auth.py  config.py  database.py  security.py
src/app/models/: category.py  user.py
src/app/routes/: __init__.py  category.py  user.py
src/app/schemas/: category.py  user.py
src/app/services/: category.py  user.py
